fix: change color of h2s to remove wave contrast errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,6 +168,7 @@ section{
     position: absolute;
     top: -10px;
     left: 0;
+    color: var(--black);
 }
 
 
@@ -176,6 +177,7 @@ section h2{
     text-align: center;
     margin-bottom: 0;
     background-color: var(--dark-green);
+    color: var(--white);
 
 }
 
